infra/k8s/comments-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: comments-np-srv
spec:
  type: NodePort
  selector:
    appname: comments
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
