infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      appname: event-bus
  template:
    metadata:
      labels:
        appname: event-bus
    spec:
      containers:
        - name: event-bus-container
          image: kiritok/event-bus
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-cip-srv
spec:
  type: ClusterIP
  selector:
    appname: event-bus
  ports:
    - name: event-bus
      protocol: TCP
      port: 4005
      targetPort: 4005
