infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      appname: posts
  template:
    metadata:
      labels:
        appname: posts
    spec:
      containers:
        - name: posts-container
          image: kiritok/posts
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: posts-cip-srv
spec:
  selector:
    appname: posts
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
