infra/k8s/posts-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-np-srv
spec:
  type: NodePort
  selector:
    appname: posts
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
