infra/k8s/query-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: query-np-srv
spec:
  type: NodePort
  selector:
    appname: query
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
